send a click event also when a form is activated by pressing enter from one of the fields. Matches the behaviour of all other browsers.

BUG: 91652

svn path=/branches/KDE/3.5/kdelibs/; revision=471912